static/css/main.css
* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html, body {
    width: 100%;
    height: 100%;
}

body {
    margin: 0;
    background-color: #000;
    color: #fff;
    font-family: "helvetica neue", helvetica, sans-serif;
    font-size: 18px;
    line-height: 21px;
}

#body {
    max-width: 540px;
    margin: 0 auto;
    padding: 100px 20px;
    background-color: black;
    color: white;
}

#body > header {
    text-align: center;
    padding-bottom: 19px;
    color: red;
}

#body > span {
    padding-left: 30px;
}

#clock-container {
}

#clock-container.small {
    background-color: transparent;
    position: fixed;
    padding: 20px;
}

#clock-container.small > header {
    text-align: center;
}

a,
a:link,
a:visited {
    text-decoration: none;
    color: red;
}

a:hover {
    color: white;
}

/* list stuff */
ul {
    list-style-type: none;
    padding: 0px;
}
#claims {
    position: fixed;
    bottom: 0;
    right: 0;
    padding: 20px;
    -webkit-font-smoothing: antialiased;
}

textarea,
input {
    font-size: 12pt;
    color: #fff;
    background-color: #f00;
}

textarea {
    width: 100%;
    height: 100px;
    padding: 3px;
    resize: none;
}

input[type="text"] {
    padding: 4px;
    width: 100%;
}

input[type="submit"] {
    border: none;
    color: #f00;
    background-color: transparent;
    float: right;
}

input[type="submit"]:hover {
    cursor: pointer;
    color: white;
}

table {
    width: 100%;
}

table,
tr, th, td,
textarea, input {
    margin: 0;
    padding: 2px 5px;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

td {
    padding: 3px 0;
    vertical-align: top;
}

td.label {
    color: #fff;
    font-family: "helvetica-neue-r", "helvetica neue", helvetica, sans-serif;
    font-size: 14px;
    line-height: 17px;
}

/* image stuff */
#images {
    position: absolute;
    top: 0;
    right: 0;
    width: 20vw;
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
    padding-right: 20px;
}

.img-container {
    padding-top: 20px;
}

img {
    width: 100%;
}

/* audio */

#control {
    position: fixed;
    left: 0px;
    bottom: 0px;
    height: 45px;
    width: 45px;
    padding-top: 0px;
    padding-left: 15px;
    border: none;
    border-radius: 0px;
    background-color:#000;
    color:#FFF;
    font-size: 18pt;
    z-index:+1;
    -webkit-appearance: none; /* ios */
}

#control:hover {
    cursor:pointer;
    border: none;
    border-radius: 0px;
}

/* mobil-ify */
@media screen and (max-width: 768px) {
    #clock-container.small {
        position: static;
    }
    
    #body {
        padding: 20px;
    }
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

